blpapi-sys/src/bindings.rs

extern "C" {
    pub fn blpapi_ProviderSession_publish(
        session: *mut blpapi_ProviderSession_t,
        event: *mut blpapi_Event_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_sendResponse(
        session: *mut blpapi_ProviderSession_t,
        event: *mut blpapi_Event_t,
        isPartialResponse: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_getAbstractSession(
        session: *mut blpapi_ProviderSession_t,
    ) -> *mut blpapi_AbstractSession_t;
}
extern "C" {
    pub fn blpapi_ProviderSession_flushPublishedEvents(
        session: *mut blpapi_ProviderSession_t,
        allFlushed: *mut ::std::os::raw::c_int,
        timeoutMsecs: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_create() -> *mut blpapi_ServiceRegistrationOptions_t;
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_duplicate(
        parameters: *const blpapi_ServiceRegistrationOptions_t,
    ) -> *mut blpapi_ServiceRegistrationOptions_t;
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_destroy(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
    );
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_copy(
        lhs: *mut blpapi_ServiceRegistrationOptions_t,
        rhs: *const blpapi_ServiceRegistrationOptions_t,
    );
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_addActiveSubServiceCodeRange(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
        start: ::std::os::raw::c_int,
        end: ::std::os::raw::c_int,
        priority: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_removeAllActiveSubServiceCodeRanges(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
    );
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_setGroupId(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
        groupId: *const ::std::os::raw::c_char,
        groupIdLength: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_setServicePriority(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
        priority: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_setPartsToRegister(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
        parts: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_getGroupId(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
        groupdIdBuffer: *mut ::std::os::raw::c_char,
        groupIdLength: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_getServicePriority(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ServiceRegistrationOptions_getPartsToRegister(
        parameters: *mut blpapi_ServiceRegistrationOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_create(event: *mut blpapi_Event_t)
        -> *mut blpapi_EventFormatter_t;
}
extern "C" {
    pub fn blpapi_EventFormatter_destroy(victim: *mut blpapi_EventFormatter_t);
}
extern "C" {
    pub fn blpapi_EventFormatter_appendMessage(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *mut blpapi_Name_t,
        topic: *const blpapi_Topic_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendMessageSeq(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *mut blpapi_Name_t,
        topic: *const blpapi_Topic_t,
        sequenceNumber: ::std::os::raw::c_uint,
        arg1: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendResponse(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *mut blpapi_Name_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendRecapMessage(
        formatter: *mut blpapi_EventFormatter_t,
        topic: *const blpapi_Topic_t,
        cid: *const blpapi_CorrelationId_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendRecapMessageSeq(
        formatter: *mut blpapi_EventFormatter_t,
        topic: *const blpapi_Topic_t,
        cid: *const blpapi_CorrelationId_t,
        sequenceNumber: ::std::os::raw::c_uint,
        arg1: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendFragmentedRecapMessage(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *mut blpapi_Name_t,
        topic: *const blpapi_Topic_t,
        cid: *const blpapi_CorrelationId_t,
        fragmentType: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendFragmentedRecapMessageSeq(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *mut blpapi_Name_t,
        topic: *const blpapi_Topic_t,
        fragmentType: ::std::os::raw::c_int,
        sequenceNumber: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueBool(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: blpapi_Bool_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueChar(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueInt32(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: blpapi_Int32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueInt64(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: blpapi_Int64_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueFloat32(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: blpapi_Float32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueFloat64(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: blpapi_Float64_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueDatetime(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: *const blpapi_Datetime_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueHighPrecisionDatetime(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: *const blpapi_HighPrecisionDatetime_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueString(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueFromName(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
        value: *const blpapi_Name_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_setValueNull(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_pushElement(
        formatter: *mut blpapi_EventFormatter_t,
        typeString: *const ::std::os::raw::c_char,
        typeName: *const blpapi_Name_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_popElement(
        formatter: *mut blpapi_EventFormatter_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueBool(
        formatter: *mut blpapi_EventFormatter_t,
        value: blpapi_Bool_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueChar(
        formatter: *mut blpapi_EventFormatter_t,
        value: ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueInt32(
        formatter: *mut blpapi_EventFormatter_t,
        value: blpapi_Int32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueInt64(
        formatter: *mut blpapi_EventFormatter_t,
        value: blpapi_Int64_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueFloat32(
        formatter: *mut blpapi_EventFormatter_t,
        value: blpapi_Float32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueFloat64(
        formatter: *mut blpapi_EventFormatter_t,
        value: blpapi_Float64_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueDatetime(
        formatter: *mut blpapi_EventFormatter_t,
        value: *const blpapi_Datetime_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueHighPrecisionDatetime(
        formatter: *mut blpapi_EventFormatter_t,
        value: *const blpapi_HighPrecisionDatetime_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueString(
        formatter: *mut blpapi_EventFormatter_t,
        value: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendValueFromName(
        formatter: *mut blpapi_EventFormatter_t,
        value: *const blpapi_Name_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_EventFormatter_appendElement(
        formatter: *mut blpapi_EventFormatter_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_DiagnosticsUtil_memoryInfo(
        buffer: *mut ::std::os::raw::c_char,
        bufferLength: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_HighResolutionClock_now(
        timePoint: *mut blpapi_TimePoint_t,
    ) -> ::std::os::raw::c_int;
}
